s12_tasks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-ingress
spec:
  type: ClusterIP
  selector:
    app: web-ingress
  ports:
    - port: 80
      targetPort: 80
